@@ -142,8 +142,8 @@ class Contract:
                 res.add(end)
             return sorted(res)
 
-        if not start or start < self.start_date:
-            start = self.start_date
+        if not start or start < self.initial_start_date:
+            start = self.initial_start_date
         dates = limit_dates(self.get_dates(), start)
         lines = self.product.calculate_premiums(self, dates)
         return lines
